<resources>
    <string name="app_name">Game</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="zgadnij_liczb">Zgadnij liczbę</string>
    <string name="surrender">Surrender</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="settings">Settings</string>
    <string name="backspace">Backspace</string>
    <string name="confirm">Confirm</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
</resources>